docs: update description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-youtube-iframe",
-  "version": "0.0.1",
-  "description": "Learning how to create React modules using TypeScript!",
+  "version": "0.0.2",
+  "description": "lite component to embed and control YouTube videos",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
