--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "react-youtube-iframe-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nsrau.github.io/react-youtube-iframe",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
